tests/baselines/reference/generatorTypeCheck8.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts(2,17): error TS2322: Type 'IterableIterator<数字>' is not assignable to type 'BadGenerator'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => IterableIterator<数字>' is not assignable to type '() => Iterator<文字>'.
      Type 'IterableIterator<数字>' is not assignable to type 'Iterator<文字>'.
        Types of property 'next' are incompatible.
          Type '(value?: 任意) => IteratorResult<数字>' is not assignable to type '(value?: 任意) => IteratorResult<文字>'.
            Type 'IteratorResult<数字>' is not assignable to type 'IteratorResult<文字>'.
              Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts (1 errors) ====
    interface BadGenerator extends Iterator<number>, Iterable<string> { }
    function* g3(): BadGenerator { }
                    ~~~~~~~~~~~~
!!! error TS2322: Type 'IterableIterator<数字>' is not assignable to type 'BadGenerator'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '() => IterableIterator<数字>' is not assignable to type '() => Iterator<文字>'.
!!! error TS2322:       Type 'IterableIterator<数字>' is not assignable to type 'Iterator<文字>'.
!!! error TS2322:         Types of property 'next' are incompatible.
!!! error TS2322:           Type '(value?: 任意) => IteratorResult<数字>' is not assignable to type '(value?: 任意) => IteratorResult<文字>'.
!!! error TS2322:             Type 'IteratorResult<数字>' is not assignable to type 'IteratorResult<文字>'.
!!! error TS2322:               Type '数字' is not assignable to type '文字'.